city and servicep name truncated bug fix

--- a/asal-reviews-ui/src/app/components/review-table/review-table.component.css
+++ b/asal-reviews-ui/src/app/components/review-table/review-table.component.css
@@ -1,6 +1,7 @@
 .card-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: row;
+  gap: 1%;
   flex-flow: wrap;
 }
